kube-blog-cilsy/staging-blog-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-deployment
  namespace: staging
  labels:
    name: blog-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      name : blog-deployment
  template:
    metadata:
      labels:
        name: blog-deployment
    spec:
      containers:
      - name : blog-deployment
        image: wordpress:5.7.2-apache
        ports:
        - containerPort: 80

---

kind: Service
apiVersion: v1
metadata:
  name: blog-service
  namespace: staging
spec:
  selector:
    name: blog-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: blog-ingress
  namespace: staging
  annotations:
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/affinity: "cookie"
     nginx.ingress.kubernetes.io/session-cookie-name: "goodbye-cookie"
     nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
     nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
     nginx.ingress.kubernetes.io/affinity-mode: persistent
     nginx.ingress.kubernetes.io/session-cookie-hash: sha1
spec:
  rules:
  - host: blog-stage.jasnicahuang.xyz
    http:
      paths:
      - backend:
          serviceName: blog-service
          servicePort: 80
